--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,22 @@
+attrs==20.2.0
 certifi==2020.6.20
 chardet==3.0.4
 click==7.1.2
 idna==2.10
+iniconfig==1.0.1
 joblib==0.16.0
+mock==4.0.2
+more-itertools==8.5.0
 nltk==3.5
+packaging==20.4
+pluggy==0.13.1
+py==1.9.0
+pyparsing==2.4.7
+pytest==6.0.2
 regex==2020.7.14
 requests==2.24.0
+six==1.15.0
+sshuttle==1.0.1
+toml==0.10.1
 tqdm==4.49.0
 urllib3==1.25.10
